syntax = "proto3";

option go_package = "genproto/users_service";

package users_service;

service UserService{
    rpc Create(CreateUser) returns (User){}
    rpc GetById(UserPrimaryKey) returns(User){}
    rpc GetList(GetListUserRequest) returns(GetListUserResponse){}
    rpc Update(UpdateUser) returns(User){}
}

message Empty{}

message UserPrimaryKey{
    string id = 1;
}

message User{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string username = 4;
    string status = 5;
    string created_at = 6;
    string updated_at = 7;
    string telegram_id = 8;
    UserStatus user_status = 9;
}

message CreateUser{
    string first_name = 1;
    string last_name = 2;
    string username = 3;
    string telegram_id = 4;
}

message UpdateUser{
    string id = 1;
    string status = 2;
    string warning_count = 3;
}

message GetListUserRequest{
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListUserResponse{
    int64 count = 1;
    repeated User users = 2;
}

message UserStatus{
    string status = 1;
    string warning_count = 2;
}